--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"lint:packages": "pnpm dedupe --check",
 		"lint:spelling": "cspell \"**\" \".github/**/*\"",
 		"prepare": "husky",
-		"test": "vitest",
 		"tsc": "tsc"
 	},
 	"lint-staged": {
@@ -40,9 +39,6 @@
 		"@release-it/conventional-changelog": "10.0.0",
 		"@types/eslint-plugin-markdown": "2.0.2",
 		"@types/node": "22.13.9",
-		"@vitest/coverage-v8": "3.0.7",
-		"@vitest/eslint-plugin": "1.1.36",
-		"console-fail-test": "0.5.0",
 		"cspell": "8.17.5",
 		"eslint": "9.21.0",
 		"eslint-plugin-jsdoc": "50.6.3",
@@ -66,8 +62,7 @@
 		"sentences-per-line": "0.3.0",
 		"tsup": "8.4.0",
 		"typescript": "5.8.2",
-		"typescript-eslint": "8.26.0",
-		"vitest": "3.0.7"
+		"typescript-eslint": "8.26.0"
 	},
 	"packageManager": "pnpm@10.4.0",
 	"engines": {
