--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
 		"@eslint/js": "9.23.0",
 		"@release-it/conventional-changelog": "10.0.0",
 		"@types/eslint-plugin-markdown": "2.0.2",
-		"@types/node": "22.13.9",
+		"@types/node": "22.13.10",
+		"create-typescript-app": "2.26.5",
 		"cspell": "8.18.0",
 		"eslint": "9.23.0",
-		"eslint-plugin-jsdoc": "50.6.3",
+		"eslint-plugin-jsdoc": "50.6.8",
 		"eslint-plugin-jsonc": "2.20.0",
 		"eslint-plugin-markdown": "5.1.0",
 		"eslint-plugin-n": "17.16.2",
-		"eslint-plugin-package-json": "0.26.2",
-		"eslint-plugin-perfectionist": "4.10.0",
+		"eslint-plugin-package-json": "0.29.0",
+		"eslint-plugin-perfectionist": "4.10.1",
 		"eslint-plugin-regexp": "2.7.0",
 		"eslint-plugin-yml": "1.17.0",
 		"husky": "9.1.7",
